Fix Vertically aligned header content

--- a/css/styling.css
+++ b/css/styling.css
@@ -4,29 +4,29 @@
     /*box-sizing: border-box;*/
 /*}*/
 
-.rgba-primary-0 { color: rgba(255, 24,  0,1) }	/* Main Primary color */
-.rgba-primary-1 { color: rgba(255,114, 99,1) }
-.rgba-primary-2 { color: rgba(255, 76, 57,1) }
-.rgba-primary-3 { color: rgba(197, 19,  0,1) }
-.rgba-primary-4 { color: rgba(155, 15,  0,1) }
+.rgba-primary-0 { background: rgba(255, 24,  0,1) url(../imgs/header_bg.png) }	/* Main Primary color */
+.rgba-primary-1 { background: rgba(255,114, 99,1) url(../imgs/header_bg.png) }
+.rgba-primary-2 { background: rgba(255, 76, 57,1) url(../imgs/header_bg.png) }
+.rgba-primary-3 { background: rgba(197, 19,  0,1) url(../imgs/header_bg.png) }
+.rgba-primary-4 { background: rgba(155, 15,  0,1) url(../imgs/header_bg.png) }
 
-.rgba-secondary-1-0 { color: rgba(255,124,  0,1) }	/* Main Secondary color (1) */
-.rgba-secondary-1-1 { color: rgba(255,175, 99,1) }
-.rgba-secondary-1-2 { color: rgba(255,154, 57,1) }
-.rgba-secondary-1-3 { color: rgba(197, 96,  0,1) }
-.rgba-secondary-1-4 { color: rgba(155, 76,  0,1) }
+.rgba-secondary-1-0 { background: rgba(255,124,  0,1) url(../imgs/header_bg.png) }	/* Main Secondary color (1) */
+.rgba-secondary-1-1 { background: rgba(255,175, 99,1) url(../imgs/header_bg.png) }
+.rgba-secondary-1-2 { background: rgba(255,154, 57,1) url(../imgs/header_bg.png) }
+.rgba-secondary-1-3 { background: rgba(197, 96,  0,1) url(../imgs/header_bg.png) }
+.rgba-secondary-1-4 { background: rgba(155, 76,  0,1) url(../imgs/header_bg.png) }
 
-.rgba-secondary-2-0 { color: rgba(  4,133,157,1) }	/* Main Secondary color (2) */
-.rgba-secondary-2-1 { color: rgba( 73,164,182,1) }
-.rgba-secondary-2-2 { color: rgba( 39,143,163,1) }
-.rgba-secondary-2-3 { color: rgba(  3,103,121,1) }
-.rgba-secondary-2-4 { color: rgba(  2, 81, 95,1) }
+.rgba-secondary-2-0 { background: rgba(  4,133,157,1) url(../imgs/header_bg.png) }	/* Main Secondary color (2) */
+.rgba-secondary-2-1 { background: rgba( 73,164,182,1) url(../imgs/header_bg.png) }
+.rgba-secondary-2-2 { background: rgba( 39,143,163,1) url(../imgs/header_bg.png) }
+.rgba-secondary-2-3 { background: rgba(  3,103,121,1) url(../imgs/header_bg.png) }
+.rgba-secondary-2-4 { background: rgba(  2, 81, 95,1) url(../imgs/header_bg.png) }
 
-.rgba-complement-0 { color: rgba(  0,193, 43,1) }	/* Main Complement color */
-.rgba-complement-1 { color: rgba( 81,208,109,1) }
-.rgba-complement-2 { color: rgba( 44,196, 78,1) }
-.rgba-complement-3 { color: rgba(  0,149, 33,1) }
-.rgba-complement-4 { color: rgba(  0,117, 26,1) }
+.rgba-complement-0 { background: rgba(  0,193, 43,1) url(../imgs/header_bg.png) }	/* Main Complement color */
+.rgba-complement-1 { background: rgba( 81,208,109,1) url(../imgs/header_bg.png) }
+.rgba-complement-2 { background: rgba( 44,196, 78,1) url(../imgs/header_bg.png) }
+.rgba-complement-3 { background: rgba(  0,149, 33,1) url(../imgs/header_bg.png) }
+.rgba-complement-4 { background: rgba(  0,117, 26,1) url(../imgs/header_bg.png) }
 
 .article-img1 { background: url(../imgs/brushe.jpg); background-size: cover; }
 /*.article-img2 { background: url(../imgs/brushe.jpg); background-size: cover; }*/
@@ -86,6 +86,16 @@ ul {
     .container {
         width: 1170px;
     }
+}
+
+.verticle-align {
+    display:block;
+    position: absolute;
+    text-align: center;
+    /*vertical-align: middle;*/
+    top:23%;
+    left: 0;
+    right: 0;
 }
 
 .container {
@@ -263,10 +273,22 @@ nav {
     display: block;
     margin-bottom: 50px;
     min-height: 400px;
+    position: relative;
 
     /*font*/
     text-align: center;
     /*vertical-align:middle;*/
+}
+.box {
+    color: #eee;
+    display: block;
+    width: 600px;
+    margin: 0 auto;
+}
+
+.box p {
+    margin: 0;
+    font-size: 14px;
 }
 
 /*.vertical-center {*/
@@ -393,6 +415,24 @@ article > p:after {
     height: 70px; /*same height as header*/
     margin-top: -70px; /*same height as header*/
     visibility: hidden;
+}
+
+.social {
+    /*background*/
+    background-size: contain;
+
+    /*layout*/
+    padding: 48px;
+    display: block;
+    margin-bottom: 50px;
+    /*min-height: 400px;*/
+
+    /*font*/
+    text-align: center;
+}
+
+.social > .container > a {
+    padding: 0 100px;
 }
 
 /*header:after, header:before {*/
